colortbl somewhat fixed

--- a/datastructures.tex
+++ b/datastructures.tex
@@ -32,6 +32,8 @@ Die Ergebnisse der Laufzeit-Analysen der sieben Operationen auf den vorgestellte
 \begin{table}[!ht]
   \centering
 
+  \def\eltransparency{0.3}
+
   \caption{Abschätzung der Komplexität für verschiedene Datenstrukturen und Operationen}
   \label{tab:dataruntimes}
   \begin{tabularx}{\textwidth}{|X|*8c|}
