--- a/settings.tex
+++ b/settings.tex
@@ -42,23 +42,25 @@
 \newcommand{\cmark}{\ding{51}}
 \newcommand{\ccross}{\ding{55}}
 
+\newcolumntype{C}{>{\centering\arraybackslash}X}
+\newcolumntype{R}{>{\hsize=0.15\textwidth}X}
+\newcolumntype{Y}{>{\flushleft\arraybackslash}X}
+
+\newcommand{\cG}[1]{\cellcolor{Green}#1}
+\newcommand{\cY}[1]{\cellcolor{Yellow}#1}
+\newcommand{\cR}[1]{\cellcolor{Red}#1}
+
+\ifcolortblfix
 \definecolor{Green}{rgb}{0.0 1.0 0.0}
 \definecolor{Yellow}{rgb}{1.0 1.0 0.0}
 \definecolor{Red}{rgb}{1.0 0.0 0.0}
 \definecolor{lightgray}{gray}{0.9}
 
-\newcolumntype{C}{>{\centering\arraybackslash}X}
-\newcolumntype{R}{>{\hsize=0.15\textwidth}X}
-
-\newcommand{\cG}[1]{\transparent{5.0}\cellcolor{Green}#1}
-\newcommand{\cY}[1]{\transparent{5.0}\cellcolor{Yellow}#1}
-\newcommand{\cR}[1]{\transparent{5.0}\cellcolor{Red}#1}
-
-\DeclareSIUnit\gpcc{\gram\per\cubic\centi\meter}
-\def\oddrowcolors{\rowcolors{1}{}{black}}
-\def\evenrowcolors{\rowcolors{1}{black}{}}
+\newcommand{\oddrowcolors}{\def\eltransparency{0.15}\rowcolors{1}{}{black}}
+\newcommand{\evenrowcolors}{\def\eltransparency{0.15}\rowcolors{1}{black}{}}
 
 %% rowcolors fix: This makes the rowcolors boxes transparent, so they won't overwrite hline and vline commands (i.e. table borders)
+\def\eltransparency{1.0}
 \makeatletter
 \def\CT@@do@color{%
   \global\let\CT@do@color\relax
@@ -66,13 +68,26 @@
         \advance\@tempdima\@tempdimb
         \advance\@tempdima\@tempdimc
         \kern-\@tempdimb
-\transparent{0.2}%
+\transparent{\eltransparency}%
         \leaders\vrule
                 \hskip\@tempdima\@plus 1fill
         \kern-\@tempdimc
         \hskip-\wd\z@ \@plus -1fill }
 \makeatother
+\def\arraystretch{1.1}
 %\setlength{\arrayrulewidth}{0.6pt}
+
+\else
+
+\definecolor{Green}{rgb}{0.7 1.0 0.7}
+\definecolor{Yellow}{rgb}{1.0 1.0 0.7}
+\definecolor{Red}{rgb}{1.0 0.7 0.7}
+\definecolor{lightgray}{gray}{0.9}
+
+\newcommand{\oddrowcolors}{\rowcolors{1}{}{lightgray}}
+\newcommand{\evenrowcolors}{\rowcolors{1}{lightgray}{}}
+
+\fi
 
 %threeparttable textwidth
 \renewcommand{\TPTminimum}{\textwidth}
@@ -82,6 +97,8 @@
 \newcommand{\continuehere}{\todoline{continuehere}{}}
 
 \newcommand{\ignore}[1]{}
+
+\DeclareSIUnit\gpcc{\gram\per\cubic\centi\meter}
 
 %% disable todo
 \ifdraft{
@@ -96,7 +113,3 @@
 
 \newcommand{\chemlegend}[1]{\begin{minipage}[c]{0.7cm}\includegraphics[width=\textwidth]{#1}\end{minipage}}
 \newcommand{\chemlegendce}[1]{\chemlegend{#1}\ce{#1}}
-
-% asd
-%% \renewcommand{\oddrowcolors}{}
-%% \renewcommand{\evenrowcolors}{}
