--- a/contents.tex
+++ b/contents.tex
@@ -48,14 +48,13 @@
 \markboth{Abkürzungsverzeichnis}{Abkürzungsverzeichnis}
 \def\listacronymname{Abkürzungsverzeichnis}
 
-\newcolumntype{Y}{>{\flushleft\arraybackslash}X}
-
 %\begin{acronym}[SQL]
 % \acro{CNTs}{Kohlenstoffnanoröhrchen (engl. Carbon Nanotubes, CNTs)}
 % \acro{DFT}{Dichtefunktionaltheorie}
 %\end{acronym}
 
-\def\arraystretch{1.3}
+{
+\def\arraystretch{1.5}
 \begin{tabular}{lll}
 ALD       & Atomic Layer Deposition             & Atomlagenabscheidung                                       \\
 CFD       & Computational Fluid Dynamics        & Eine Methode zur Gasfluss/Simulation                       \\
@@ -70,7 +69,7 @@ MEAM      & Modified Embedded Atom Method       & Modifizierte Eingebettete-Atom
 PVD       & Physical Vapor Deposition           & Physikalische Gasphasenabscheidung                         \\
 RAM       & Random-Access Memory                & Arbeitsspeicher                                            \\
 RDF       & Radial Distribution Function        & Radiale Verteilungsfunktion                                \\
-RMS       & Root Mean Square                    & Standardabweichung, häufig für Rauheiten                   \\
+RMS       & Root Mean Square                    & Standardabweichung, z.B. für Rauheiten                     \\
 ReaxFF    & Reactive Force Fields               & Reaktive Kraftfelder                                       \\
 TMA       & Trimethylaluminum (\ce{Al(CH3)3})   & Trimethylaluminium (\ce{Al(CH3)3})                         \\
 NPT       & \multicolumn{2}{l}{Bezeichnung für das Isotherm-Isobare Ensemble}                                \\
@@ -78,7 +77,7 @@ NVE       & \multicolumn{2}{l}{Bezeichnung für das Mikrokanonische Ensemble}   
 NVT       & \multicolumn{2}{l}{Bezeichnung für das Kanonische Ensemble}                                      \\
 Parsivald & \multicolumn{2}{l}{Parallel Atomistic Reaction Simulator for Vapor and Atomic Layer Depositions} \\
 \end{tabular}
-
+}
 \begin{comment}
   Liste der Abkürzungen, die nicht weiter erklärt werden:
   (Comment-Umgebung, damit sie vom Parser trotzdem erfasst werden)
@@ -114,6 +113,8 @@ Parsivald & \multicolumn{2}{l}{Parallel Atomistic Reaction Simulator for Vapor a
 \addcontentsline{toc}{chapter}{Symbolverzeichnis}
 \markboth{Symbolverzeichnis}{Symbolverzeichnis}
 
+{
+\def\arraystretch{1.5}
 \begin{longtable}{ll}
 %% $\alpha$          & Linearer Ausdehnungskoeffizient                                     \\
 %% $\alpha$          & Schrittweite bei MD-Minimierungen                                   \\
@@ -164,7 +165,7 @@ $w_\text{sim}$       & Breite des Simulationsraumes                             
 $X$                  & Zustand eines Systemes                                              \\
 $\mathbb{X}$         & Zustandsraum für ein System                                         \\
 \end{longtable}
-
+}
 %%======================================================================
 %%      Ende
 %%======================================================================
