workerdichten-Abschätzung ergänzt

--- a/contents.tex
+++ b/contents.tex
@@ -149,6 +149,7 @@ $\tau$               & Dämpfungszeit von Thermostaten                          
 $\tau_p$             & Dämpfungszeit von Barostaten                                        \\
 $T_1$                & Serielle Laufzeit einer Rechnung                                    \\
 $T_p$                & Parallele Laufzeit einer Rechnung für $p$ Prozesse                  \\
+$T_\infty$           & Minimale Laufzeit einer parallelen Rechnung                         \\
 $T$                  & Temperatur                                                          \\
 $T_\text{E}$         & Laufzeit zur Auswahl eines KMC-Ereignisses                          \\
 $T_\text{MD}$        & Laufzeit der MD-Simulation eines Ereignisses                        \\
