--- a/depositions.tex
+++ b/depositions.tex
@@ -110,7 +110,7 @@ Alle Prozesse finden in speziellen Abscheidungskammern oder Reaktoren statt, üb
     }
   }
 
-  \caption[Arten von Abscheidungskammern]{
+  \caption[Arten von Abscheidungskammern für PVD, CVD und ALD]{
     Arten von Abscheidungskammern für PVD, CVD und ALD\cite{granneman_batch_2007}.
   }
   \label{fig:reactors}
