--- a/kmc.tex
+++ b/kmc.tex
@@ -38,8 +38,8 @@ Abbildung~\ref{fig:kmctree} zeigt zur Veranschaulichung ein generisches Beispiel
   \def\svgwidth{14cm}
   \input{img/kmc_tree.pdf_tex}
 
-  \caption[Exemplarischer Verlauf einer KMC-Simulation]{
-    Exemplarischer Verlauf einer KMC-Simulation:
+  \caption[Schematische Darstellung der KMC-Methode]{
+    Schematische Darstellung der KMC-Methode:
     Ereignisse $E_i$ werden in jedem Schritt $n$ zufällig ausgewählt, um eine Folge von Zuständen $X_n$ zu erhalten.
   }
 
