--- a/results.tex
+++ b/results.tex
@@ -10,12 +10,12 @@ Danach werden Kupfer-Nickel-Multi\-lagen\-systeme in Abschnitt~\ref{multilayer} 
 In Abschnitt~\ref{siliconpvd} werden dann Silizium-PVD-Systeme mit dem Ziel der Abscheidung nichtmetallischer Schichten auf Porösität und Wachstum amorpher Strukturen untersucht.
 Zuletzt kehrt Abschnitt~\ref{aluminaald} kurz zum Thema der Bachelorarbeit zurück und untersucht mit MD-Methoden die Stabilität von TMA und Wasser als Precursoren der \ce{Al2O3}-ALD sowie die Hydroxylierung einer Aluminiumoxid-Oberfläche durch Wassermoleküle.
 
-%% \input{goldpvd}
-%% \clearpage
-%% \input{copperpvd}
-%% \clearpage
-%% \input{multilayer}
-%% \clearpage
-%% \input{siliconpvd}
-%% \clearpage
-%% \input{aluminaald}
+\input{goldpvd}
+\clearpage
+\input{copperpvd}
+\clearpage
+\input{multilayer}
+\clearpage
+\input{siliconpvd}
+\clearpage
+\input{aluminaald}
