--- a/runtime.tex
+++ b/runtime.tex
@@ -153,7 +153,7 @@ Unter Optimierung des Hostprozesses zu $T_\text{E} = \SI{3}{\milli\second}$ sind
     \includegraphics[width=\textwidth]{maxsizebymdtime}
   \end{subfigure}
 
-  \caption{Einfluss der MD-Laufzeit auf die maximale Workerdichte und das Maximum der Simulationsgröße für effiziente Rechnungen ($\rho_\text{worker} > \SI{10}{\percent}$)}
+  \caption[$\rho_\text{worker}$ und $w_\text{eff}$ in Abhängigkeit von $T_\text{MD}$]{Einfluss der MD-Laufzeit auf die maximale Workerdichte und das Maximum der Simulationsgröße für effiziente Rechnungen ($\rho_\text{worker} > \SI{10}{\percent}$)}
   \label{fig:densitymaxsize}
 
 \end{figure}
@@ -174,7 +174,7 @@ Die maximale Zahl der Prozesse in kleinen Räumen wird hingegen ausschließlich 
     \includegraphics[width=\textwidth]{workersbykmctime}
   \end{subfigure}
 
-  \caption{Einfluss der Ereignis-Laufzeit $T_\text{E}$ und der MD-Laufzeit $T_\text{MD}$ auf die maximale Zahl paralleler Prozesse $p_\text{max}$}
+  \caption[$p_\text{max}$ in Abhängigkeit von $T_\text{E}$ und $T_\text{MD}$]{Einfluss der Ereignis-Laufzeit $T_\text{E}$ und der MD-Laufzeit $T_\text{MD}$ auf die maximale Zahl paralleler Prozesse $p_\text{max}$}
   \label{fig:workersbytime}
 
 \end{figure}
@@ -196,7 +196,7 @@ Mit der MD-Zeit steigt also die maximale Zahl der Worker linear, wodurch mehr Er
     \includegraphics[width=\textwidth]{runtimebykmctime}
   \end{subfigure}
 
-  \caption{Einfluss der Ereignis-Laufzeit $T_\text{E}$ und der MD-Laufzeit $T_\text{MD}$ auf die minimale Laufzeit $T_\infty$ einer Parsivald-Simulation}
+  \caption[$T_\infty$ in Abhängigkeit von $T_\text{E}$ und $T_\text{MD}$]{Einfluss der Ereignis-Laufzeit $T_\text{E}$ und der MD-Laufzeit $T_\text{MD}$ auf die minimale Laufzeit $T_\infty$ einer Parsivald-Simulation}
   \label{fig:runtimebytime}
 
 \end{figure}
