--- a/appendix_runtime.tex
+++ b/appendix_runtime.tex
@@ -35,11 +35,6 @@ Die Erhöhung von $w_\text{MD}$ hat umfangreichere Einflüsse und verursacht ein
 Somit wird $p_\text{max}$ für $w_\text{sim} < w_\text{eff}$ verringert und für $w_\text{sim} > w_\text{eff}$ erhöht.
 Da mit der Vergrößerung der MD-Boxen auch die gesamte Laufzeit nahezu proportional skaliert (Abbildung~\ref{fig:tpother}), wird $w_\text{MD}$ meistens minimal gewählt.
 
-\section{Abschätzung der maximalen Workerdichte per Random Sequential Adsorption}
-Bei Random Sequential Adsorption (RSA) werden beliebige Objekte nichtüberlappend an zufälligen Positionen auf einer Oberfläche verteilt, bis kein weiteres Objekt platziert werden kann.
-Die Verteilung der Worker auf der Oberfläche geschieht auf eine ähnliche Weise, sodass als Grenzwert der Workerdichte \SI{56.2}{\percent}\cite{brosilow_random_1991} angegeben werden kann.
-Da überlappende MD-Boxen in Parsivald nicht komplett abgelehnt werden, sondern ihre Berechnung nur bis zum Abschluss des überdeckten Ereignisses zurück gestellt wird und sich so ein kompletter Abhängigkeitsbaum bildet\cite{lorenz_entwicklung_2012}, liegt die Workerdichte typischerweise unterhalb dieses Wertes\todo{maximale Workerdichte plotten?}.
-
 \begin{figure}[p]
 
   \captionsetup[subfigure]{singlelinecheck=false}
@@ -71,5 +66,34 @@ Da überlappende MD-Boxen in Parsivald nicht komplett abgelehnt werden, sondern 
 
   \caption{Einfluss von $\rho_\text{worker}$ und $w_\text{MD}$ auf die Laufzeit $T_p$}
   \label{fig:tpother}
+
+\end{figure}
+
+\clearpage
+
+\section{Abschätzung der maximalen Workerdichte per Random Sequential Adsorption}
+Bei Random Sequential Adsorption (RSA) werden geometrische Objekte nichtüberlappend an zufälligen Positionen in einem Raum verteilt, bis kein weiteres Objekt platziert werden kann.
+Die Verteilung der quadratischen Worker auf der Oberfläche geschieht auf eine ähnliche Weise, sodass als Grenzwert der Workerdichte \SI{56.2}{\percent}\cite{brosilow_random_1991} angegeben werden kann.
+
+Da Parsivald die Ereignisorte mit KMC-Methoden wählt, muss die zeitliche Reihenfolge der Ereignisse eingehalten werden, weshalb die überdeckenden Ereignisse nicht verworfen werden, sondern bis zum Abschluss des überdeckten Ereignisses zurück gestellt werden und sich so ein kompletter Abhängigkeitsbaum aufbaut, wie er in meiner Bachelorarbeit wird\cite{lorenz_entwicklung_2012}.
+Dadurch kollidieren die MD-Boxen zurückgestellter Ereignisse mit nachfolgenden Ereignissen, welche wiederum zurückgestellt werden müssen.
+Somit reduziert sich das Maximum der Workerdichte für große Simulationsräume auf den Grenzwert von \SI{25.95}{\percent} (Abbildung~\ref{fig:rsamaxdensity}).
+Dieser Wert wurde über eine modifizierte RSA-Simulation ermittelt, die auf diese Parsivald-Methode der Ereignisauswahl und -Durchführung angepasst wurde.
+
+KMC-Ereignisse werden in Parsivald für geringe Zeiträume durch einen trivialen Warteschlangen-Algorithmus vorausberechnet, um eine hohe Parallelisierbarkeit zu ermöglichen.
+Um häufige Revisionen der Ereignisse und damit verbundene Leistungseinbußen zu vermeiden, wird die Tiefe der Abhängigkeitsbäume der Ereignisse beschränkt, was sich in einer verminderten Zahl von Versuchen zur Erzeugung eines neuen KMC-Ereignisses äußert.
+Im Gegenzug sinkt damit die Workerdichte auf die für Gold-PVD und Kupfer-PVD in den Abschnitten~\ref{goldpvd} und~\ref{copperpvd} beobachteten Werte von \SIrange{10}{20}{\percent}.
+
+\vspace{2em}
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=10cm]{rsa_maxdensity}
+
+  \caption[Abschätzung der maximalen Workerdichte ]{
+    Abschätzung der maximalen Workerdichte durch eine modifizierte RSA-Simulation.
+    Als Grenzwert für viele KMC-Versuche ergibt sich \SI{25.95}{\percent}
+  }
+  \label{fig:rsamaxdensity}
 
 \end{figure}
