--- a/datastructures.tex
+++ b/datastructures.tex
@@ -94,7 +94,7 @@ Theoretisch sind mit Access Caching, Bitweiser Adressierung, Surface Flagging od
 \begin{figure}[t]
   \centering
   \includegraphics[width=\textwidth]{octree}
-  \caption[Veranschaulichung der Funktionsweise eines Octrees]{
+  \caption[Schema der Funktionsweise eines Octrees]{
     Quadtree zur Veranschaulichung der Funktionsweise eines Octrees:
     Räumliche Unterteilung eines Raumes (l) mit zugehörigem Baum von Zellen (r).
   }
@@ -135,7 +135,7 @@ Delaunay-Triangulationen werden noch nicht direkt im KMC-Algorithmus für Off-La
   \centering
   \def\svgwidth{\textwidth}
   \input{img/delaunay.pdf_tex}
-  \caption[Beispiel des Delaunay-Kriteriums]{
+  \caption[Schema des Delaunay-Kriteriums]{
     In der Delaunay-Triangulation (c) einer Punktwolke (a) dürfen sich keine weiteren Punkte im Umkreis jedes Simplexes (b) befinden
   }
   \label{fig:delaunay}
@@ -185,7 +185,7 @@ Dabei sind Anwendungen auf auch periodische und teilperiodische Räume möglich.
       \label{fig:delaunay-alpha-d}
     \end{subfigure}
   }
-  \caption[Bestimmung der Oberfläche per Delaunay-Triangulation]{
+  \caption[Delaunay-Triangulation: Konvexe Hülle und Alpha-Form]{
     Bestimmung der Oberfläche per Delaunay-Triangulation.
     Die Alpha-Form in (d) trianguliert auch Ausreißer-Punkte, zählt sie aber ebenfalls nicht zur Hülle
   }
