tables and figures: tot and tof captions corrected

--- a/aluminaald.tex
+++ b/aluminaald.tex
@@ -43,7 +43,7 @@ Ihre Referenzwerte wurden auf die gleiche Weise durch die Untersuchung der ideal
 
 \begin{table}[b!]
   \oddrowcolors
-  \caption[Vergleich struktureller Eigenschaften von $\alpha$-\ce{Al2O3}]{
+  \caption[Vergleich der strukturellen Eigenschaften von relaxiertem $\alpha$-\ce{Al2O3}]{
     Vergleich struktureller Eigenschaften von \ce{Al2O3} für verfügbare ReaxFF-Parametrisierungen.
     Referenzwerte stammen von einer relaxierten Kristallstruktur.
   }
@@ -197,7 +197,7 @@ Bei vollständiger chemischer Adsorption aller Wassermoleküle ergäben für die
     }
     \label{fig:wateraluminasurface-c}
   \end{subfigure}
-  \caption{
+  \caption[Simulation einer $alpha$-\ce{Al2O3}-Hydroxylierung mit \ce{H2O}]{
     Simulation einer Hydroxylierung von $\alpha$-\ce{Al2O3} mit Wasser.
     Die Oberfläche wird mit Hydroxylgruppen (grün hervorgehoben) abgesättigt.
   }
