--- a/appendix_constants.tex
+++ b/appendix_constants.tex
@@ -103,7 +103,7 @@
 
 \begin{table}[!h]
   \centering
-  \caption{Eigenschaften der Silizium-CVD-Precursormoleküle}
+  \caption{Struktur der Silizium-CVD-Precursormoleküle}
   \evenrowcolors
   \begin{tabularx}{\textwidth}{|XXR|}
     \hline
