--- a/appendix_datastructures.tex
+++ b/appendix_datastructures.tex
@@ -70,7 +70,7 @@ Delaunay-Triangulationen bilden per Alpha-Form implizit die globale Oberfläche 
       \subcaption{k-d-Baum}
     \end{subfigure}
   }
-  \caption[Übersicht über Partitionen des Simulationsraumes]{
+  \caption[Übersicht über Partitionsmethoden des Simulationsraumes]{
     Übersicht über Partitionen des Simulationsraumes für einige Datenstrukturen.
     k-d-Baum-Partitionen sind dynamisch und ändern sich mit jeder Manipulation.
   }
