--- a/appendix_gold.tex
+++ b/appendix_gold.tex
@@ -26,7 +26,7 @@ Zum Zeitpunkt der vollständigen Relaxierung liegt die Dicke der abgeschiedenen 
     \label{fig:goldnanostructures-columns}
   \end{subfigure}
 
-  \caption{Nanostrukturen zur Überprüfung der Oberflächenrelaxierung durch Parsivald}
+  \caption{Gold-Nanostrukturen zur Überprüfung der Stabilität von Parsivald}
   \label{fig:goldnanostructures}
 
 \end{figure}
@@ -47,7 +47,7 @@ Zum Zeitpunkt der vollständigen Relaxierung liegt die Dicke der abgeschiedenen 
     \label{fig:goldnanostructures-columns-step3}
   \end{subfigure}
 
-  \caption{Oberfläche nach zwei Parsivald-Zyklen ($\approx \SI{2}{\angstrom}$ Schichtwachstum)}
+  \caption[Gold-Nanostrukturen nach zwei Parsivald-Zyklen]{Oberfläche nach zwei Parsivald-Zyklen ($\approx \SI{2}{\angstrom}$ Schichtwachstum)}
   \label{fig:goldnanostructures-step3}
 
 \end{figure}
@@ -68,7 +68,7 @@ Zum Zeitpunkt der vollständigen Relaxierung liegt die Dicke der abgeschiedenen 
     \label{fig:goldnanostructures-columns-step8}
   \end{subfigure}
 
-  \caption{Oberfläche nach acht Parsivald-Zyklen ($\approx \SI{7}{\angstrom}$ Schichtwachstum)}
+  \caption[Gold-Nanostrukturen nach acht Parsivald-Zyklen]{Oberfläche nach acht Parsivald-Zyklen ($\approx \SI{7}{\angstrom}$ Schichtwachstum)}
   \label{fig:goldnanostructures-step9}
 
 \end{figure}
