--- a/appendix_multilayer.tex
+++ b/appendix_multilayer.tex
@@ -12,7 +12,7 @@ Als Resultat bilden sich Poren (Abbildung~\ref{fig:multilayer_surfacefail}), die
 \begin{figure}[!h]
   \centering
   \includegraphics[height=10cm]{CuNi_surface8_noalpha}
-  \caption{Oberflächenprofil einer unterrelaxierten CuNi-Oberfläche mit 4 Lagen je \SI{15}{\angstrom}}
+  \caption[Oberflächenprofil einer unterrelaxierten \ce{Cu-Ni}-Multilage]{Oberflächenprofil einer unterrelaxierten \ce{Cu-Ni}-Schicht mit 4 Lagen je \SI{15}{\angstrom}}
   \label{fig:multilayer_surfacefail}
 \end{figure}
 
@@ -36,7 +36,7 @@ Das Verschwinden der Hohlräume in eigenen Experimenten deutet auf ein Artefakt 
     \caption{Profil einer Schicht mit 6 Lagen je \SI{6}{\nano\meter}}
     \label{fig:multilayer_thickfail}
   \end{subfigure}
-  \caption{Fehlgeschlagene \ce{CuNi}-Abscheidungen während der Parameter-Optimierung}
+  \caption[\ce{Cu-Ni}: Bildung von Nanoporen und \SI{5}{\nano\meter} dicken Lagen]{Fehlgeschlagene \ce{Cu-Ni}-Abscheidungen während der Parameter-Optimierung}
 \end{figure}
 
 \section{Simulationen mit Lagendicken von jeweils \texorpdfstring{\SI{5}{\nano\meter}}{5 nm}}
