--- a/appendix_silica.tex
+++ b/appendix_silica.tex
@@ -34,9 +34,7 @@ Bei \pot{Al\_Al0\_AlN}, \pot{kulkarni}, \pot{nielson} und \pot{zhang} behalten d
     \subcaption{liu-ettringite: instabil}
   \end{subfigure}
 
-  \caption[Stabilitätsuntersuchungen von Silan]{
-    Stabilitätsuntersuchungen von Silan (\ce{SiH4}) bei \SI{600}{\kelvin}
-  }
+  \caption{Stabilitätsuntersuchungen von Silan (\ce{SiH4}) bei \SI{600}{\kelvin}}
   \label{fig:silanestability}
 
 \end{figure}
@@ -83,8 +81,7 @@ Es zeigen sich jedoch auch hier Überkoordinationen, wie sie bereits in Abbildun
     \label{fig:kulkarnireaction}
   \end{subfigure}
 
-  \caption{ReaxFF-Simulation der Reaktion von \ce{SiH4} mit \ce{O2}
-  }
+  \caption{ReaxFF-Simulationen der Reaktion von \ce{SiH4} mit \ce{O2}}
   \label{fig:precursorreactions}
 
 \end{figure}
@@ -107,7 +104,7 @@ Es zeigen sich jedoch auch hier Überkoordinationen, wie sie bereits in Abbildun
     \subcaption{\pot{zhang}: Reaktionen}
   \end{subfigure}
 
-  \caption{Simulation von Clusterbildung und partiellen Reaktionen von Precursormolekülen bei 500K}
+  \caption[\ce{SiH4} mit \ce{O2}: Clusterbildung und partielle Reaktionen]{Simulation von Clusterbildung und partiellen Reaktionen von Precursormolekülen bei 500K}
   \label{fig:precursorclusters}
 
 \end{figure}
