--- a/copperpvd.tex
+++ b/copperpvd.tex
@@ -30,7 +30,9 @@ Für diese Parametersätze wird eine kurze Voruntersuchung durchgeführt, bevor 
 \begin{table}[b!]
   \begin{threeparttable}
     \oddrowcolors
-    \caption{Vergleich struktureller Eigenschaften von Kupfer mit Literaturdaten\cite{haynes_crc_2011}}
+    \caption[Vergleich struktureller Eigenschaften von Kupfer mit Literaturdaten]{
+      Vergleich struktureller Eigenschaften von Kupfer mit Literaturdaten\cite{haynes_crc_2011}
+    }
     \label{tab:copperpreresults}
     \begin{tabularx}{\textwidth}{|Xrrrrr|}
       \hline
@@ -187,7 +189,7 @@ Deshalb sind Abscheidungssimulationen auf polykristallinen und amorphen Substrat
     \subcaption{$t=100$}
   \end{subfigure}
 
-  \caption[Bildung und Abschluss eines Kupfer-Kraters]{
+  \caption[Entwicklung von Kupfer-Kratern in epitaktischen PVD-Simulationen]{
     Bildung und Abschluss eines Kupfer-Kraters.
     Seitenansicht der per Alpha-Form extrahierten Oberflächenatome
   }
