--- a/goldpvd.tex
+++ b/goldpvd.tex
@@ -19,7 +19,9 @@ Somit unterstützt die genutzte EAM-Para\-metri\-sierung das Zielsystem hinsicht
 \begin{table}[hbt]
   \begin{threeparttable}
   \oddrowcolors
-  \caption{Vergleich der strukturellen Eigenschaften von Gold mit experimentellen Daten}
+  \caption[Vergleich der strukturellen Eigenschaften von Gold mit Literaturdaten]{
+    Vergleich der strukturellen Eigenschaften von Gold mit Literaturdaten\cite{haynes_crc_2011}
+  }
   \label{tab:goldpreresults}
   \begin{tabularx}{\textwidth}{|lXXXX|}
     \hline
@@ -205,7 +207,7 @@ In der Auswertung macht sich der Abschluss durch einen rapiden Abfall der Rauhei
     \subcaption{Fortsetzung der Spitze ($\sigma_z = \SI{8.0}{\angstrom}$)}
     \label{fig:golddepositions-f}
   \end{subfigure}
-  \caption[Gold-Abscheidung auf strukturierten Substraten]{
+  \caption[Gold-PVD auf strukturierten Substraten]{
     Goldschicht nach \num{50} Abscheidungsschritten (\SI{47}{\angstrom}) auf strukturierten Substraten
   }
   \label{fig:golddepositions}
@@ -320,7 +322,7 @@ Somit bestätigen sich einige Vorhersagen aus Abschnitt~\ref{runtime}, jedoch si
     \subcaption{Speicherverbrauch der Hauptprozesse}
     \label{fig:goldscala-memory}
   \end{subfigure}
-  \caption{Parallelisierungseigenschaften von Parsivald im Vergleich zu dem Modell der Laufzeiteigenschaften (Abschnitt~\ref{runtime})}
+  \caption[Vergleich der Parallelisierbarkeit zwischen dem Modell und PVD-Simulationen]{Parallelisierungseigenschaften von Parsivald im Vergleich zu dem Modell der Laufzeiteigenschaften (Abschnitt~\ref{runtime})}
   \label{fig:goldscala}
 \end{figure}
 
