--- a/multilayer.tex
+++ b/multilayer.tex
@@ -50,9 +50,7 @@ Für Systeme, die zu einer stärkeren Durchmischung neigen, sollten längere Rel
     \subcaption{Einfluss von $t_\text{relax}$ auf die Lagen-Qualität}
     \label{fig:multilayerplots-b}
   \end{subfigure}
-  \caption[Rauheit und Qualität von Kupfer-Nickel-Multilagen]{
-    Rauheit und Qualität von Kupfer-Nickel-Multilagen
-  }
+  \caption{Rauheit und Qualität von simulierten Kupfer-Nickel-Multilagen}
   \label{fig:multilayerplots}
 \end{figure}
 
