--- a/siliconpvd.tex
+++ b/siliconpvd.tex
@@ -88,7 +88,7 @@ Die Parametersätze \pot{chenoweth}, \pot{lg} und \pot{liu\_nitra\-mines} konnte
 
 \begin{table}[!b]
   \oddrowcolors
-  \caption{Struktur von c-\ce{Si} nach der MD-Relaxierung}
+  \caption{Vergleich der strukturellen Eigenschaften von relaxiertem c-\ce{Si}}
   \label{tab:csiresults}
 
   \begin{tabularx}{\textwidth}{|llXXlX|}
@@ -186,7 +186,7 @@ Aufgrund der Spannweite möglicher amorpher Strukturen gilt eine Parametrisierun
 \begin{figure}[!b]
   \centering
   \includegraphics[width=\textwidth]{kulkarni_rdf_amorphous}
-  \caption[Radiale Verteilungsfunktionen von relaxiertem a-\ce{Si}]{
+  \caption[RDF-Diagramme von relaxiertem a-\ce{Si}]{
     RDF von a-\ce{Si} mit \pot{kulkarni}-Parametrisierung: keine Kristallisation erkennbar
     }
   \label{fig:amorphousrdf}
@@ -239,7 +239,7 @@ In der RDF der Schicht (Abbildung~\ref{fig:siliconresults-b}) ist das kristallin
     \subcaption{Radiale Verteilungsfunktion bei $t=80$}
     \label{fig:siliconresults-b}
   \end{subfigure}
-  \caption[Struktur einer Silizium-PVD-Schicht aus Parsivald]{
+  \caption[Dicke, Rauheit und RDF einer \ce{Si}-Schicht aus Parsivald]{
     Struktur einer Silizium-PVD-Schicht aus Parsivald (\SI{10x10x8}{\nano\meter})
   }
   \label{fig:siliconresults}
@@ -269,7 +269,7 @@ Es zeigen sich höhere Rauheiten, feinere Nanoporen und steilere Hänge, die zu 
       \put(0,0){\input{img/si111_surface_profile_halfscale.pdf_tex}}
     \end{overpic}
   \end{subfigure}
-  \caption[Oberflächenprofil einer Silizium-PVD-Schicht]{
+  \caption[Oberflächenprofil einer \ce{Si}-Schicht aus Parsivald]{
     Oberflächenprofil einer per PVD-Simulation erzeugten Schicht
   }
   \label{fig:siliconprofile}
